	Fixed slapd-bdb/hdb alock_close bug (ITS#4259)
	Fixed slapd-bdb dn2id IDL cache bug (ITS#4263)
	Added slapd warning for excessive threads number (ITS#4249)
	Fixed slapd-bdb/hdb mode argument parsing (ITS#4257)
	Fixed slapd-bdb/hdb cn=config reindexing (ITS#4260)
	Fixed slapd-bdb/hdb cn=config olcDbIndex modify/replace (ITS#4262)
	Fixed slapd-bdb/hdb lockup issue (ITS#4184)
	Added slapd-ldap/meta idle-timeout support (ITS#4115)
	Fixed slapd-ldap anonymous identity assertion (ITS#4272)
	Fixed slapo-rwm static DN free bug (ITS#4248)
	Fixed slapo-syncprov unpublished control (ITS#4238)
	Fixed slapo-syncprov message id issue
	Fixed slapo-unique extraneous searches (ITS#4267)
	Updated slapo-dynlist (ITS#3756,3781,4224)
	Build environment
		Fixed thread dependency of test028 (ITS#4141)
		Updated test033-glue-syncrepl (ITS#4264)
	Documentation
		Updated slapd.conf(5) and Admin Guide (ITS#4146,4266)
		Updated slapo-dynlist(5) (ITS#4197)
		Updated slapo-pcache(5) (ITS#4232)

OpenLDAP 2.3.13 Release
	Fixed libldap/liblutil MSG_ACCRIGHTSLEN bug (ITS#4206)
	Fixed libldap ldap_bv2escaped_filter_value issue (ITS#4212)
	Fixed liblutil URL value-specs issue (ITS#4221)
	Fixed slapd sizelimit disclose issue (ITS#4213)
	Fixed slapd gentlehup write restrict issue (ITS#3717)
	Fixed slapd gentlehup abnormal issue (ITS#4217)
	Fixed slapd delta-sync subtree scope issue (ITS#4227)
	Fixed slapd cn=config OID/name pollution issue (ITS#4185)
	Fixed slapd cn=config rootdn issue (ITS#4192)
	Fixed slapd cn=config slaptest -F without -f issue (ITS#4194)
	Fixed slapd cn=config ACL issue (ITS#4218)
	Fixed slapd-bdb negative results IDL cache issue (ITS#4223)
	Fixed slapd-bdb cursor close issue (ITS#4226)
	Fixed slapd-hdb slapadd -q issue (ITS#4210)
	Fixed slapd-hdb missing results issue (ITS#4186)
	Fixed slapd-ldap potential double free issue (ITS#4189)
	Fixed slapd-meta matched DN issue (ITS#4195)
	Fixed slapd-meta DN cache issue (ITS#4196)
	Fixed slapd-monitor shadow issue (ITS#4214)