@@ -35,6 +35,10 @@ argsfile	@TESTDIR@/slapd.m.args
 #rwmmod#modulepath ../servers/slapd/overlays/
 #rwmmod#moduleload rwm.la
 
+# seems to improve behavior under very heavy load
+# (i.e. it alleviates load on target systems)
+threads		8
+
 #######################################################################
 # database definitions
 #######################################################################
@@ -58,5 +62,7 @@ uri		"@URI1@o=Example,c=US"
 suffixmassage	"o=Example,c=US" "dc=example,dc=com"
 pseudorootdn	"cn=manager,dc=example,dc=com"
 pseudorootpw	secret
+
+limits		dn.exact="cn=Bjorn Jensen,ou=Information Technology Division,ou=People,o=Example,c=US" time=1 size=8
 
 #monitor#database	monitor
