@@ -17,8 +17,9 @@ OpenLDAP 2.3.14 Engineering
 	Fixed slapd-bdb/hdb cn=config reindexing (ITS#4260)
 	Fixed slapd-bdb/hdb cn=config olcDbIndex modify/replace (ITS#4262)
 	Fixed slapd-bdb/hdb lockup issue (ITS#4184)
-	Added slapd-ldap/meta idle-timeout support (ITS#4115)
 	Fixed slapd-ldap anonymous identity assertion (ITS#4272)
+	Added slapd-ldap/meta idle-timeout support (ITS#4115)
+	Fixed slapd-meta bind-timeout handling (ITS#xxxx)
 	Fixed slapo-rwm static DN free bug (ITS#4248)
 	Fixed slapo-syncprov unpublished control (ITS#4238)
 	Fixed slapo-syncprov message id issue
